# minetest-mapper-cpp

./: .gitignore  AUTHORS  BlockPos.h  CMakeCPackLists.txt  CMakeLists.txt  COPYING  Changelog  Color.cpp  Color.h  LICENSE.BSD-2clause  LICENSE.LGPLv2.1  PixelAttributes.cpp  PixelAttributes.h  PixelCacheEntry.h  README.rst  TileGenerator.cpp  TileGenerator.h  ZlibDecompressor.cpp  ZlibDecompressor.h  autogenerating-colors.txt  cmake_config.h.in  colors-average-alpha.txt  colors-cumulative-alpha.txt  colors-heightmap.txt  colors.txt  config.h  db-leveldb.cpp  db-leveldb.h  db-redis.cpp  db-redis.h  db-sqlite3.cpp  db-sqlite3.h  db.h  empty.cpp  heightmap-colors-rainbow.txt  heightmap-colors.txt  heightmap-nodes.txt  mapper.cpp  minetest-database.h  package-description.txt  (+1 more)
doc/: build-instructions.rst  features.rst  manual.rst
